# cnet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  common.h  conv_layer.c  data.h  fc_layer.h  layer.h  linear_sample.c  log.h  main.c  mnist.h  mnist_sample.c  mse_layer.c  net.c  pooling_layer.h  poolling_layer.c  relu_layer.h  sigmoid_layer.c  sigmoid_layer.h  softmax_layer.c  softmax_layer.h  xor_sample.c
core/: common.c  common.h  data.c  data.h  gemm.c  gemm.h  im2col.c  im2col.h  layer.c  layer.h  net.c  net.h  random.c  random.h
cuda/: cudahelper.c  cudahelper.h  gemm.c
example/: googlenet_example.c  inception.h  linear_example.c  mnist.c  mnist_example.c  rnn_example.c  vgg.h  vgg_example.c  xor_example.c
gflags/: flags.cc  flags.h
layer/: branch_layer.c  branch_layer.h  cee_layer.c  cee_layer.h  conv_layer.c  conv_layer.h  dropout_layer.c  dropout_layer.h  fc_layer.c  fc_layer.h  layers.h  merge_layer.c  merge_layer.h  mse_layer.c  mse_layer.h  normalization_layer.c  normalization_layer.h  pooling_layer.c  pooling_layer.h  poolling_layer.c  relu_layer.c  relu_layer.h  rnn_layer.c  rnn_layer.h  scale_layer.c  scale_layer.h  sigmoid_layer.c  sigmoid_layer.h  softmax_layer.c  softmax_layer.h  tanh_layer.c  tanh_layer.h
opencl/: cl.c  cl.h  clhelper.c  clhelper.h  clutil.c  clutil.h  gemm.c
sample/: mnist_sample.c  xor_sample.c
